# exeout

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  all_vfor.txt  build_errors.txt  build_errors_2.txt  build_errors_2_utf8.txt  build_errors_utf8.txt  gen_keys.ps1  index.html  k  loader_error.txt  package-lock.json  package.json  stdout  studio_error.txt  tauri-updater.json  tauri_private.key.pub  tauri_private_FINAL.key.pub  temp_config.vue  temp_config_utf8.vue  test.key.pub  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: API.md  USER_GUIDE.md
installers/windows/: setup.iss
scripts/: create-icons.ps1  deploy-multiposte.ps1  release.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/loader/: Cargo.toml  build_err.txt  build_log.txt
src-tauri/loader/src/: main.rs
src-tauri/src/: main.rs
src-tauri/src/compiler/: packer.rs  php_embed.rs  resources.rs
src-tauri/src/runtime/: generator.rs
src-tauri/src/runtime/template/: exeoutput.js  main.rs  tauri.conf.json
src-tauri/src/server/: http.rs
src-tauri/src/utils/: compression.rs  crypto.rs  windows.rs
src-tauri/tests/: integration_tests.rs
src/__tests__/components/: ProjectWizard.spec.ts
src/bindings/: tauri.ts
src/components/: CompilerConfig.vue  ConsoleLog.vue  ProgressBar.vue  ProjectWizard.vue  Settings.vue
src/router/: index.ts
src/stores/: compiler.ts  project.ts
src/types/: project.ts
test_project/: index.php
