[package]
name = "exephp-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.6"
rfd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wry = "0.24.11"
tao = "0.16.10"
chrono = "0.4.44"
rayon = "1.7"
num_cpus = "1.15"
ureq = { version = "2.9", features = ["json"] }
self-replace = "1.3"
