[package]
name = "exephp-loader"
version = "1.1.0"
edition = "2021"

[dependencies]
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
num_cpus = "1.0"
rfd = "0.11"
# Windows specific for standalone window without tao/wry conflicts
webview2-com = "0.19"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse"
] }
