[package]
name = "exephp-loader"
version = "1.6.4"
edition = "2021"

[[bin]]
name = "loader"
path = "src/main.rs"

[dependencies]
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
# wry brings tao internally — no separate tao needed (avoids gdk-sys conflict with rfd)
wry = "0.24"

[target.'cfg(windows)'.dependencies]
# Minimal Windows API for error MessageBox — already in the wry/tao dep tree
windows-sys = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
